--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicon-256.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PhoneFlow</title>
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
